fixed some broken styles on the scrubber area

--- a/src/components/VideoPlayer/VideoPlayer.scss
+++ b/src/components/VideoPlayer/VideoPlayer.scss
@@ -47,12 +47,13 @@ body {
         width: 90%;
 
         @include tablet {
-            left: 2.75rem;
-            width: 88%;
+            margin-left: auto;
+            margin-right: auto;
+            width: 44rem;
         }
 
         @include desktop {
-            left: 14rem;
+            width: 49rem;
             bottom: 3rem;
             
         }
